# phosphor-settingsd

./: .gitignore  MAINTAINERS  Makefile  Makefile.am  OWNERS  README  README-settings-manager.md  README.txt  auto_reboot.hpp  boot_mode.hpp  boot_source.hpp  configure.ac  frequency_turbo.hpp  groups  meson.build  meson_options.txt  network_config.hpp  power_cap.hpp  power_restore_policy.hpp  project.config  restriction_mode.hpp  settings.py  settings.yaml  settings_example.yaml  settings_file.py  settings_main.cpp  settings_manager.c  settings_manager.hpp  settings_manager.hpp.mako  settings_manager.mako.hpp  settings_manager.py  settings_parser.py  settings_scope.hpp  setup.cfg  setup.py  time_ntp.hpp  time_owner.hpp  time_sync.hpp
config/: config.h.meson  meson.build
subprojects/: cereal.wrap
